--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ version: '3.4'
 services:
   cachedb:
     image: redis
+  
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
     
   jpsage-erp.webapi:
     image: ${DOCKER_REGISTRY-}jpsageerpwebapi
