--- a/src/ERP/JPSAGE-ERP.WebAPI/appsettings.json
+++ b/src/ERP/JPSAGE-ERP.WebAPI/appsettings.json
@@ -17,5 +17,10 @@
   "FileFormat": ".pdf, .docx, .doc, .xls, .xlsx, .txt, .png, .jpeg, .jpg, .gif",
   "BASE_URL": "http://localhost:4200",
   "BASE_URL_LOGIN": "http://localhost:4200/auth/login",
-  "BASE_URL_TEST": ""
+  "BASE_URL_TEST": "",
+  "EventBus": {
+    "HostName": "localhost",
+    "UserName": "guest",
+    "Password": "guest"
+  }
 }
